[NGRINDER-694] Make test work again